# weather_mcp

./: .gitignore  README.md  delivery_log.txt  mcp_client.py  pyproject.toml  weather_server.py
